--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
 }
 
 apply plugin: 'com.google.gms.google-services'
