--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,19 +33,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 apply plugin: 'com.google.gms.google-services'
