--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
         jcenter()
         maven {
             url "https://maven.google.com" // Google's Maven repository
+            url "https://jitpack.io"
         }
     }
 }
