--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="vn.com.hieptt149.workoutmanager">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -18,10 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".workoutdetails.AddWorkoutActivity" />
+        <activity
+            android:name=".workoutdetails.AddWorkoutActivity"
+            android:hardwareAccelerated="false"></activity>
         <activity android:name=".login.LoginActivity" />
-        <activity android:name=".login.UserInfoDialog" />
-        <activity android:name=".login.ForgotPasswordDialog"></activity>
     </application>
 
 </manifest>
