--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation 'com.sdsmdg.harjot:croller:1.0.7'
+    implementation 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
 }
 apply plugin: 'com.google.gms.google-services'
